# cxx-modules-example

./: .gitignore  CMakeLists.txt  README.md  example.cpp
archlinux-pkgbuild/: PKGBUILD  README.md  clang.cfg.template
cmake/: std.cmake
cmd/: CMakeLists.txt  command.cpp  root.cpp  types.cpp
model/: CMakeLists.txt  attribute.cpp  class.cpp  diagram.cpp  errors.cpp  relationship.cpp  root.cpp  tags.cpp
util/: CMakeLists.txt  result.cpp  root.cpp
